--- a/docs/user-guides/tools/index.mdx
+++ b/docs/user-guides/tools/index.mdx
@@ -1,342 +1,59 @@
-# LangSwarm Tool System Documentation
-
-**Complete documentation for the unified LangSwarm tool system**
-
-## 🎯 Overview
-
-LangSwarm features a unified tool system that consolidates different tool types into a single, consistent MCP-based architecture. This documentation provides everything you need to understand, use, and develop tools in the system.
-
+---
+title: "Tools Overview"
+description: "Give your agents superpowers with MCP tools"
 ---
 
-## 🚀 **Quick Navigation**
+# 🛠️ Tools (MCP)
 
-### **New to LangSwarm Tools?**
-- **[🚀 Unified System Overview](architecture)** - Understand the V2 tool architecture
-- **[📖 User Guides](./)** - Learn how to use tools effectively
+LangSwarm uses the **Model Context Protocol (MCP)** as its universal standard for connecting agents to external data and systems.
 
-### **Using Tools**
-- **[🔧 MCP Local Mode](mcp/local-mode)** - Zero-latency tool execution
-- **[🌐 MCP Remote Mode](mcp/remote-mode)** - Distributed tool execution
-- **[💭 Intent-Based Calls](intent-based-calls)** - Natural language tool usage
-- **[🔗 Tool Chaining](tool-chaining)** - Connecting tools together
+Instead of writing custom python functions for every tool, you can connect your agents to any **MCP Server**—whether it's running locally on your machine or hosted remotely.
 
-### **Developing Tools**
-- **[🛠️ Tool Development](../../developer-guides/mcp-tool-development)** - Build custom tools
-- **[📋 MCP Developer Guide](../../developer-guides/mcp-tool-development)** - Complete MCP tool guide
-- **[🔄 Migration Guide](migration)** - Migrate from V1 tool types
+## 🚀 Quick Start
 
-### **MCP Ecosystem**
-- **[🌍 MCP Overview](mcp/local-mode)** - Complete MCP ecosystem documentation
-- **[🔧 MCP Development](../../developer-guides/mcp-tool-development)** - Building MCP tools
+Connect an agent to the `filesystem` and `sqlite` tools in seconds using `uvx`.
 
----
-
-## 📊 **Unified Tool System Benefits**
-
-### **Before V2: Fragmented Tool Landscape**
-```
-❌ 4 Different Tool Types:
-├── MCP Tools (35+ tools) → Different interface patterns
-├── Synapse Tools → Different registry system  
-├── Retrievers (RAG) → Different execution model
-└── Plugins → Different configuration approach
-```
-
-**Problems Solved:**
-- ❌ Inconsistent development patterns across tool types
-- ❌ Complex configuration with 4 different approaches
-- ❌ Fragmented documentation and examples
-- ❌ Different testing and debugging approaches
-
-### **After V2: Unified Architecture**
-```
-✅ Single Unified System:
-├── Enhanced MCP Interface → All tools use same pattern
-├── Auto-Discovery Registry → Automatic tool detection
-├── Async Execution → Better performance and scalability
-├── V2 Error Integration → Consistent error handling
-└── Backward Compatibility → Existing tools continue working
-```
-
-**Benefits Achieved:**
-- ✅ **95% Complexity Reduction**: Single interface for all tools
-- ✅ **Auto-Discovery**: Automatic tool registration and detection
-- ✅ **Async Performance**: Concurrent tool execution
-- ✅ **Consistent Experience**: Same patterns for development and usage
-- ✅ **100% Compatibility**: All existing tools continue working
-
----
-
-## 🛠️ **Tool Categories**
-
-### **Built-in Tools**
-Core tools provided with LangSwarm for essential functionality.
-
-| Tool | Purpose | Documentation |
-|------|---------|---------------|
-| **Filesystem** | File operations (read, write, list) | `builtin/filesystem/` |
-| **Memory Search** | Semantic search through conversations | `builtin/memory/` |
-| **Workflow Executor** | Execute complex multi-step workflows | `builtin/workflow/` |
-| **Utility Functions** | Common utility operations | `builtin/utilities/` |
-
-### **MCP Tools**
-External and specialized tools following MCP standards.
-
-| Tool | Purpose | Documentation |
-|------|---------|---------------|
-| **BigQuery Vector Search** | Vector similarity search in BigQuery | `mcp/bigquery-vector-search/` |
-| **GitHub Integration** | Repository operations and code search | `mcp/github/` |
-| **GCP Environment** | Google Cloud Platform integrations | `mcp/gcp-environment/` |
-| **Codebase Indexer** | Index and search code repositories | `mcp/codebase-indexer/` |
-| **SQL Database** | Database query and management | `mcp/sql-database/` |
-
-### **Legacy Tool Adapters**
-Compatibility adapters for V1 tool types during migration.
-
-| Adapter | Converts | Status |
-|---------|----------|--------|
-| **Synapse Adapter** | V1 Synapse tools → V2 MCP | ✅ Available |
-| **Retriever Adapter** | V1 RAG retrievers → V2 MCP | ✅ Available |
-| **Plugin Adapter** | V1 plugins → V2 MCP | ✅ Available |
-
----
-
-## 🔄 **Migration Status**
-
-### **Current Implementation Status**
-Based on Task 03 implementation progress:
-
-| Component | Status | Completion |
-|-----------|--------|------------|
-| **V2 Tool Foundation** | 🔄 In Progress | 0% (Starting) |
-| **Auto-Discovery Registry** | ⏳ Planned | - |
-| **Compatibility Adapters** | ⏳ Planned | - |
-| **Tool Migration** | ⏳ Planned | - |
-| **Integration Updates** | ⏳ Planned | - |
-
-### **Migration Timeline**
-- **Phase 1** (Weeks 1-2): V2 tool foundation and registry
-- **Phase 2** (Weeks 3-4): Tool migration and compatibility adapters  
-- **Phase 3** (Weeks 5-6): Integration updates and optimization
-
-### **Backward Compatibility**
-During the migration period:
-- ✅ All existing tools continue working unchanged
-- ✅ V1 configurations remain valid
-- ✅ Gradual migration path available
-- ✅ No breaking changes for users
-
----
-
-## 📚 **Documentation Structure**
-
-### **[🚀 Unified System](architecture)**
-Complete overview of the unified tool architecture.
-
-- **Architecture Overview**: Tool system design
-- **Performance Improvements**: Async execution and optimization
-
-### **[🔧 MCP Ecosystem](mcp/local-mode)**
-Comprehensive MCP (Model Control Protocol) documentation.
-
-- **[Overview](mcp/local-mode)**: MCP ecosystem and standards
-- **[Development](../../developer-guides/mcp-tool-development)**: Building MCP tools  
-- **[Migration](migration)**: Converting tools to MCP
-
-### **[🎯 User Guides](./)**
-How to use tools effectively in your LangSwarm applications.
-
-- **[MCP Local Mode](mcp/local-mode)**: Zero-latency local execution
-- **[MCP Remote Mode](mcp/remote-mode)**: Distributed tool execution
-- **[Intent-Based Tool Calls](intent-based-calls)**: Natural language usage
-- **[Tool Chaining](tool-chaining)**: Connecting tools together
-
-### **[🛠️ Developer Guides](../../developer-guides/mcp-tool-development)**
-Building and extending the tool system.
-
-- **[MCP Developer Guide](../../developer-guides/mcp-tool-development)**: Complete development guide
-- **[Tool Development Patterns](../../developer-guides/mcp-tool-development)**: Best practices and patterns
-- **[Testing Strategies](../../developer-guides/mcp-tool-development)**: Testing tools effectively
-
----
-
-## 🎯 **Key Features**
-
-### **Unified Interface**
 ```python
-# All tools use the same interface pattern
-from langswarm.tools import get_tool
+from langswarm.core.agents import AgentBuilder
 
-# Get any tool using consistent interface
-filesystem_tool = get_tool("filesystem")
-bigquery_tool = get_tool("bigquery_search")
-github_tool = get_tool("github")
-
-# Execute with consistent async pattern
-result = await filesystem_tool.execute({
-    "operation": "read_file",
-    "path": "config.yaml"
-})
-```
-
-### **Auto-Discovery**
-```python
-from langswarm.tools import ToolRegistry
-
-# Automatically discover available tools
-registry = ToolRegistry()
-available_tools = registry.discover_tools()
-
-print(f"Found {len(available_tools)} tools:")
-for tool in available_tools:
-    print(f"  {tool.id}: {tool.description}")
-```
-
-### **Consistent Configuration**
-```yaml
-# Single configuration format for all tools
-tools:
-  filesystem:
-    type: "mcp"
-    enabled: true
-    config:
-      base_path: "/safe/directory"
-  
-  bigquery_search:
-    type: "mcp"
-    enabled: true
-    config:
-      project_id: "my-project"
-      dataset: "search_data"
-```
-
-### **Performance Optimization**
-```python
-# Async execution for better performance
-import asyncio
-
-async def execute_multiple_tools():
-    results = await asyncio.gather(
-        filesystem_tool.execute({"operation": "read_file", "path": "file1.txt"}),
-        bigquery_tool.execute({"query": "search query"}),
-        github_tool.execute({"operation": "search_issues", "repo": "owner/repo"})
+agent = await (AgentBuilder("researcher")
+    .openai()
+    .model("gpt-4o")
+    
+    # 1. Connect to Local Filesystem
+    .add_mcp_server(
+        name="fs",
+        command="uvx", 
+        args=["mcp-server-filesystem", "/Users/alex/projects"]
     )
-    return results
+    
+    # 2. Connect to Remote API (SSE)
+    .add_mcp_server(
+        name="api",
+        url="https://api.weather.com/mcp"
+    )
+    .build())
+
+# Agent can now read files and check weather!
+result = await agent.chat("Read analysis.py and check the weather in NYC")
 ```
 
----
+## 📚 Guides
 
-## 🔍 **Tool Discovery**
+| Guide | Description |
+| :--- | :--- |
+| **[Local Mode (Stdio)](mcp/local-mode)** | Run local tools securely using standard input/output. Perfect for `git`, `filesystem`, `postgres`. |
+| **[Remote Mode (SSE)](mcp/remote-mode)** | Connect to remote MCP servers over HTTP via Server-Sent Events. Ideal for cloud APIs. |
+| **[Architecture](architecture)** | Deep dive into how the LangSwarm Host manages MCP Clients and Servers. |
 
-### **Available Tool Sources**
-The V2 system discovers tools from multiple sources:
+## 🧩 Standard Tools
 
-1. **Built-in Tools**: Core LangSwarm functionality
-2. **Installed Packages**: pip-installed tool packages
-3. **Local Directory**: `./tools/` in your project
-4. **Environment**: Docker containers, services
-5. **Configuration**: Explicitly configured tools
+LangSwarm works instantly with the growing ecosystem of standard MCP servers:
 
-### **Discovery Process**
-```python
-from langswarm.tools import ToolRegistry
+*   **Filesystem**: Read/write access to safe directories.
+*   **Postgres**: Query and manage SQL databases.
+*   **Git**: Commit, push, and manage repositories.
+*   **Slack/Discord**: Send messages and read channels.
+*   **Memory**: Advanced vector search and knowledge graphs.
 
-registry = ToolRegistry()
-
-# Discover from all sources
-all_tools = registry.discover_tools(sources=["all"])
-
-# Discover from specific sources
-local_tools = registry.discover_tools(sources=["local_directory"])
-package_tools = registry.discover_tools(sources=["installed_packages"])
-```
-
-### **Tool Metadata**
-Each tool provides rich metadata for discovery:
-
-```python
-tool = registry.get_tool("filesystem")
-print(f"Name: {tool.metadata['name']}")
-print(f"Description: {tool.metadata['description']}")
-print(f"Capabilities: {tool.metadata['capabilities']}")
-print(f"Version: {tool.metadata['version']}")
-```
-
----
-
-## 🎮 **Getting Started**
-
-### **1. Using Existing Tools**
-```python
-from langswarm.tools import get_tool
-
-# Get a tool and use it
-tool = get_tool("filesystem")
-result = await tool.execute({
-    "operation": "read_file",
-    "path": "example.txt"
-})
-print(result["result"])
-```
-
-### **2. Auto-Discovery**
-```python
-from langswarm.tools import ToolRegistry
-
-# Discover available tools
-registry = ToolRegistry()
-tools = registry.discover_tools()
-
-# Use discovered tools
-for tool in tools:
-    if "file" in tool.metadata.get("capabilities", []):
-        print(f"File tool available: {tool.id}")
-```
-
-### **3. Tool Chaining**
-```python
-# Chain tools together
-config_content = await filesystem_tool.execute({
-    "operation": "read_file",
-    "path": "config.yaml"
-})
-
-search_results = await bigquery_tool.execute({
-    "query": config_content["result"]["query"]
-})
-```
-
-### **4. Error Handling**
-```python
-try:
-    result = await tool.execute({"operation": "invalid"})
-    if not result["success"]:
-        print(f"Tool error: {result['error']}")
-        print(f"Suggestion: {result.get('suggestion', 'No suggestion available')}")
-except Exception as e:
-    print(f"Execution error: {e}")
-```
-
----
-
-## 🆘 **Getting Help**
-
-### **Documentation**
-- **[User Guides](../user-guides/tools/)**: Using tools effectively
-- **[Developer Guides](../developer-guides/extending/tool-development/)**: Building tools
-- **[API Reference](../api-reference/tools/)**: Complete API documentation
-- **[Troubleshooting](../troubleshooting/tools/)**: Common issues and solutions
-
-### **Examples**
-- **[Tool Examples](examples/)**: Common usage patterns
-- **[Integration Examples](examples/integrations/)**: Tool integration patterns
-- **[Custom Tool Examples](examples/custom-tools/)**: Building custom tools
-
-### **Migration Support**
-- **[Migration Guide](migration/)**: V1 to V2 migration
-- **[Compatibility Reference](migration/compatibility.md)**: What changes and what doesn't
-- **[Migration Tools](migration/tools.md)**: Automated migration utilities
-
----
-
-**The LangSwarm tool system provides a powerful, unified platform for extending LangSwarm functionality while maintaining simplicity and consistency across all tool types.**
+*Check out the [Official MCP Server Registry](https://github.com/modelcontextprotocol/servers) for more.*
